Added create and update CRUD actions

--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Announcements#new</h1>
-<p>Find me in app/views/announcements/new.html.erb</p>
+<%= form_for @announcement do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+
+  <%= f.label :description %>
+  <%= f.text_area :description %>
+
+  <%= f.submit "Save" %>
+<% end %>
