--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @announcement.title %></h1>
+
+<%= link_to "Edit", edit_announcement_path(@announcement), class: 'btn btn-mini' %>
+
 <p><%= @announcement.description %></p>
