--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -1,10 +1,31 @@
-<h1>All Job Vacancy Announcements</h1>
-<% @announcements.each do |announcement| %>
-  <div class="media">
-    <div class="media-body">
-      <h4 class="media-heading">
-<%= link_to announcement.title, announcement %>
-     </h4>
-    </div>
+<h1>Edit Job Announcement</h1>
+<div class="row">
+  <div class="span6">
+    <p>Guidelines for new Job Announcements:</p>
+    <ul>
+      <li>Make sure content is appropriate.</li>
+      
+    </ul>
   </div>
-<% end %>
+  <div class="span6">
+    <%= form_for @announcement, html: { class: 'form-horizontal' } do |f| %>
+      <div class="control-group">
+        <%= f.label :title, class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :title %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :description, class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_area :description, rows: 8 %>
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <%= f.submit "Save", class: 'btn' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
