--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Announcements#index</h1>
-<p>Find me in app/views/announcements/index.html.erb</p>
+<h1>All Job Announcements</h1>
+<% @announcements.each do |announcement| %>
+  <div class="media">
+    <div class="media-body">
+      <h4 class="media-heading">
+        <%= link_to announcement.title, announcement %>
+      </h4>
+      <small>
+        submitted <%= time_ago_in_words(announcement.created_at) %> ago
+        <br/>
+        <%= announcement.notes.count %> notes
+      </small>
+    </div>
+  </div>
+<% end %>
