--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,9 +14,19 @@
     <div class="controls">
        - <%= f.email_field :email, :autofocus => true %>
 
-     + <%= f.email_field :email %> 
+     
     </div>
   </div>
+
+ <div class="control-group">
+    <%= f.label :password, class: 'control-label' %>
+    <div class="controls">
+      <%= f.password_field :password%>
+    </div>
+  </div>
+
+
+
   <div class="control-group">
     <%= f.label :password_confirmation, class: 'control-label' %>
     <div class="controls">
