--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,29 @@
 <div class="hero-unit">
   <h1>Jobseekers</h1>
-  <p>Jobseekers is an online resource for focussing and tracking the progress of your job search.</p>
+  <p>Jobseekers is an online resource for focusing your job search.</p>
+
   <p>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary btn-large' %> or 
       <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary btn-large' %> today!
   </p>
+</div>
+
+ <h2>Looking for a new job is challenging. Many find a job search to be a full-time job in and of itself.</h2> 
+
+  <h3>Let Jobseekers assist you by providing:</h3>
+
+<div class="row">
+  <div class="span4">
+    <h2>*</h2>
+  <p>Tools for focusing and tracking job announcements relevant to your search to aid you in keeping up a steady drumbeat of
+        job applications and follow-up communications.</p>
+      </div>
+      <div class="span4">
+        <h2>*</h2>
+  <p>Tools for focusing and tracking your ongoing networking activities.</p>
+</div>
+<div class="span4">
+  <h2>*</h2>
+  <p>Tools for building up a database of your ideal target employers.</p>
+</div>
 </div>
